debian-l10n-french FAQ v1.6   [Patrice Karatchentzeff]
CVS version numbers

french/international/french/debian-l10n-french-faq.sgml: 1.5 -> 1.6 
french/international/french/debian-l10n-french-faq.html/ch1.html: 1.4 -> 1.5 
french/international/french/debian-l10n-french-faq.html/ch2.html: 1.4 -> 1.5 
french/international/french/debian-l10n-french-faq.html/ch3.html: 1.4 -> 1.5 
french/international/french/debian-l10n-french-faq.html/ch4.html: 1.4 -> 1.5 
french/international/french/debian-l10n-french-faq.html/ch5.html: 1.4 -> 1.5 
french/international/french/debian-l10n-french-faq.html/footnotes.html: 1.4 -> 1.5 
french/international/french/debian-l10n-french-faq.html/index.html: 1.4 -> 1.5

--- a/french/international/french/debian-l10n-french-faq.html/ch1.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch1.html
@@ -29,7 +29,7 @@ Chapitre 1 La vie de la liste
 <hr>
 
 <h2>
-<a name="s1.1">1.1 Où trouver cette FAQ ?</a>
+<a name="s1.1">1.1 Où trouver cette FAQ&nbsp;?</a>
 </h2>
 
 <p>
@@ -55,7 +55,7 @@ Pour contribuer, me contacter directement ou poster sur
 <hr>
 
 <h2>
-<a name="s1.2">1.2 Comment lire cette FAQ ?</a>
+<a name="s1.2">1.2 Comment lire cette FAQ&nbsp;?</a>
 </h2>
 
 <p>
@@ -68,7 +68,7 @@ une autre plus développée avec explications techniques à la clé.
 <hr>
 
 <h2>
-<a name="s1.3">1.3 Comment s'abonner ? se désabonner ?</a>
+<a name="s1.3">1.3 Comment s'abonner&nbsp;? se désabonner&nbsp;?</a>
 </h2>
 
 <p>
@@ -87,7 +87,7 @@ CORPS DU MESSAGE&nbsp;:
 <p>
 Pour se désabonner, la procédure est envoyée sur chacun des courriels reçus de
 la liste de diffusion.  Il vous suffit d'envoyer un courriel à
-<em>debian-l10n-french-request@lists.debian.org&gt;</em> avec DANS LE CHAMP
+<em>debian-l10n-french-request@lists.debian.org</em> avec DANS LE CHAMP
 SUJET&nbsp;:
 
 <pre>
@@ -98,7 +98,7 @@ SUJET&nbsp;:
 <hr>
 
 <h2>
-<a name="s1.4">1.4 Comment se règlent les différends ?</a>
+<a name="s1.4">1.4 Comment se règlent les différends&nbsp;?</a>
 </h2>
 
 <p>
@@ -135,7 +135,7 @@ extrémités...
 </h2>
 
 <p>
-Il se peut que débordé par votre vie professionnelle ou familiale, vous n'ayez
+Il se peut que ,débordé par votre vie professionnelle ou familiale, vous n'ayez
 plus de temps à consacrer à la traduction pour Debian.  Si vous étiez
 responsable de traduction, il est bon alors de contacter un des responsables de
 la liste ou d'y poster un message en disant que vous renoncez à votre charge,
@@ -145,7 +145,7 @@ de façon à faciliter la maintenance des projets de traductions.
 <hr>
 
 <h2>
-<a name="s1.6">1.6 Quelle est la fréquentation du forum ?</a>
+<a name="s1.6">1.6 Quelle est la fréquentation du forum&nbsp;?</a>
 </h2>
 
 <p>
@@ -154,21 +154,21 @@ débats&nbsp;:-).  Cela dit, cela a notablement augmenté ces derniers temps.  La
 rançon du succès&nbsp;?
 
 <p>
-On pourra visualiser l'état de la fréquentation du site directement sur le site
-Debian à
+On pourra visualiser l'état de la fréquentation de la liste directement sur le
+site Debian à
 
 <p>
 <code><a
 href="http://www.debian.orglists.debian.org/stats/">http://www.debian.orglists.debian.org/stats/</a></code>
 
 <p>
-si tôt que cette page sera fonctionnelle.
+sitôt que cette page sera fonctionnelle.
 </p>
 
 <hr>
 
 <h2>
-<a name="s1.7">1.7 Quels sont les critères pour participer ?</a>
+<a name="s1.7">1.7 Quels sont les critères pour participer&nbsp;?</a>
 </h2>
 
 <p>
@@ -188,7 +188,7 @@ savoir vous servir d'un éditeur de texte.
 <hr>
 
 <h2>
-<a name="s1.8">1.8 Qui est le responsable ? (Qui contacter en cas de ...)</a>
+<a name="s1.8">1.8 Qui est le responsable&nbsp;? (Qui contacter en cas de ...)</a>
 </h2>
 
 <p>
@@ -213,13 +213,13 @@ href="http://www.fr.debian.org/devel/website/translation_coordinators">http://ww
 Ce sont les gens qui ont les droits d'accès au <code>cvs</code> du serveur
 Debian et qui peuvent archiver les traductions au fur et à mesure de leurs
 arrivées.  Ils ont aussi pour rôle d'essayer de faire régner l'harmonie et
-l'amour entre les participants de la liste ;-)
+l'amour entre les participants de la liste&nbsp;;-)
 </p>
 
 <hr>
 
 <h2>
-<a name="s1.9">1.9 Où est archivée la liste ?</a>
+<a name="s1.9">1.9 Où est archivée la liste&nbsp;?</a>
 </h2>
 
 <p>
@@ -234,7 +234,7 @@ Puis allez cliquer dans le mois-année qui vous intéresse dans
 <hr>
 
 <h2>
-<a name="s1.10">1.10 Qui est René Cougnenc ?</a>
+<a name="s1.10">1.10 Qui est René Cougnenc&nbsp;?</a>
 </h2>
 
 <p>
@@ -261,7 +261,7 @@ Comme ses traductions sont remarquables, nous y faisons souvent référence.
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.5<br>
+Version 1.6<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
