--- a/french/international/french/debian-l10n-french-faq.html/ch2.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch2.html
@@ -30,14 +30,14 @@ Chapitre 2 Techniques
 <hr>
 
 <h2>
-<a name="s2.1">2.1 Quel est le format des traductions ?</a>
+<a name="s2.1">2.1 Quel est le format des traductions&nbsp;?</a>
 </h2>
 
 <p>
 Le format retenu pour la documentation Debian est le <code>sgml</code>&nbsp;:
 il s'agit du format debian-doc dont la documentation est livrée avec toutes les
-distributions Debian (<em>cf.</em> «&nbsp;Comment apprendre le format
-debian-doc sgml&nbsp;?&nbsp;»).
+distributions Debian (cf.«&nbsp;Comment apprendre le format debian-doc
+sgml&nbsp;?&nbsp;»).
 
 <p>
 En ce qui concerne le format des pages du site oueb de Debian, le format retenu
@@ -56,7 +56,7 @@ sur ce type de traduction.  Pour plus de détails, voir le chapitre
 <hr>
 
 <h2>
-<a name="s2.2">2.2 Comment apprendre le format debian-doc <code>sgml</code> et <code>wml</code> ?</a>
+<a name="s2.2">2.2 Comment apprendre le format debian-doc <code>sgml</code> et <code>wml</code>&nbsp;?</a>
 </h2>
 
 <p>
@@ -77,7 +77,7 @@ href="http://people.debian.org/~clebars/f2dp/translations/markup.fr.html/">http:
 <hr>
 
 <h2>
-<a name="s2.3">2.3 Quelle traduction choisir ?</a>
+<a name="s2.3">2.3 Quelle traduction choisir&nbsp;?</a>
 </h2>
 
 <p>
@@ -88,9 +88,10 @@ chose de court pour vous faire la main.
 
 <p>
 Pour éviter de se noyer dans la masse des documents à traduire, Martin Quinson
-a écrit un petit script pour faciliter et automatiser la recherche.  Son script
-en fait synchronise les pages traduites avec les pages originales.  Voici
-comment cela fonctionne[<a href="footnotes.html#1" name="fr1">1</a>]&nbsp;:
+a écrit un petit script pour faciliter et automatiser la recherche.  Son
+script, en fait, synchronise les pages traduites avec les pages originales.
+Voici comment cela fonctionne[<a href="footnotes.html#1"
+name="fr1">1</a>]&nbsp;:
 
 <p>
 Il faut avoir en local (c'est-à-dire sur son disque dur) toutes les pages
@@ -124,7 +125,7 @@ faut que ledit responsable ait préalablement indiqué dans le fichier
 
 <p>
 En pratique, pour choisir une traduction, il faut récupérer les sources des
-documents par <code>cvs</code> des pages anglaises et françaises (<em>cf.</em>
+documents par <code>cvs</code> des pages anglaises et françaises (cf.
 «&nbsp;Comment utiliser <code>cvs</code>&nbsp;?&nbsp;»).  Ensuite, il faut
 lancer le script précité, sans l'option <code>-m</code> qui active l'envoi des
 courriels, et en précisant la langue (par exemple, <code>./check_trans.pl
@@ -146,7 +147,7 @@ href="http://www.debian.org/intl/french/www-untranslated.fr.html">http://www.deb
 <hr>
 
 <h2>
-<a name="s2.4">2.4 Comment se déclarer traducteur ?</a>
+<a name="s2.4">2.4 Comment se déclarer traducteur&nbsp;?</a>
 </h2>
 
 <p>
@@ -162,7 +163,7 @@ et corriger votre texte en conséquence.
 
 <p>
 Si par hasard vous n'avez pas reçu d'approbation, vous pouvez vous considérer
-comme nommé responsable automatiquement.  Faîtes bien attention toutefois que
+comme nommé responsable automatiquement.  Faites bien attention toutefois que
 le courriel destiné à la liste ait bien été acheminé...&nbsp; Attendez quand
 même un ou deux jours avant de vous lancer.
 
@@ -173,7 +174,7 @@ Si quelqu'un s'occupe déjà du document, il le fera savoir.
 <hr>
 
 <h2>
-<a name="s2.5">2.5 Comment récupérer la responsabilité d'une traduction ?</a>
+<a name="s2.5">2.5 Comment récupérer la responsabilité d'une traduction&nbsp;?</a>
 </h2>
 
 <p>
@@ -192,16 +193,16 @@ deux mois et que le responsable officiel ne donne plus signe de vie.
 <hr>
 
 <h2>
-<a name="s2.6">2.6 Comment récupérer un document ?</a>
+<a name="s2.6">2.6 Comment récupérer un document&nbsp;?</a>
 </h2>
 
 <p>
 L'ensemble de la documentation est géré par <code>cvs</code> sur le site de
 Debian.  C'est un outil permettant de régler les problèmes de versions avec
 aisance.  Par mesure de prudence, seuls les responsables officiels de la liste
-ont le droit d'accès en écriture via <code>cvs</code>.  Par contre, tout le
-monde y a accès en lecture.  Cela permet de récupérer n'importe quel document
-très facilement.  Voici une page d'explications&nbsp;:
+ont le droit d'accès en écriture <em>via</em> <code>cvs</code>.  Par contre,
+tout le monde y a accès en lecture.  Cela permet de récupérer n'importe quel
+document très facilement.  Voici une page d'explications&nbsp;:
 
 <p>
 <code><a
@@ -229,7 +230,7 @@ Positionnez la variable CVSROOT correctement&nbsp;:
 <p>
 Pour éviter de le faire à chaque fois, inscrivez-la en dur dans votre fichier
 de configuration de <code>shell</code> par défaut.  Si vous ne savez pas ce que
-vous utilisez, mettez-le par défaut dans votre ~/.bashrc.
+vous utilisez, mettez-le par défaut dans votre <code>~/.bashrc</code>.
 
 <p>
 La première fois, vous aurez à taper&nbsp;:
@@ -268,32 +269,33 @@ Exemple&nbsp;:
 <p>
 Ceci créera dans le répertoire <em>debian</em> une image du site Debian
 contenant le répertoire <em>webwml</em> contenu lui-même le contenu de
-<em>english</em> et celui de <em>french</em>.
+<em>english</em> et celui de <em>french/Bugs</em>.
 
 <p>
 Le répertoire <em>english</em> est très gros mais je conseille de le faire,
 même avec un modem.  Au 14 octobre 2001, il faisait environ 18 méga-octets.  Un
 petit mauvais moment à passer.  Les mise-à-jour ne sont pas du tout coûteuse.
-Le répertoire <em>french</em> est lui plus petit (4,8 Mo le 14 octobre 2001).
+Le répertoire <em>french</em> est lui plus petit (4,8&nbsp;Mo le 14 octobre
+2001).
 </p>
 
 <hr>
 
 <h2>
-<a name="s2.7">2.7 Comment éditer une traduction ?</a>
+<a name="s2.7">2.7 Comment éditer une traduction&nbsp;?</a>
 </h2>
 
 <p>
 Il faut récupérer le document original sur le <code>cvs</code> de Debian au
 format <code>sgml</code> pour un document et <code>wml</code> pour une page
-oueb.  Le document est alors en ASCII étendu (8 bits (iso-latin1) donc vous
-pouvez utiliser les accents).  Vous pouvez donc l'éditer avec n'importe quel
-(bon) éditeur de texte.  Ceux qui permettent la mise en couleur de balises
+oueb.  Le document est alors en ASCII étendu (8&nbsp;bits (iso-latin1) donc
+vous pouvez utiliser les accents).  Vous pouvez donc l'éditer avec n'importe
+quel (bon) éditeur de texte.  Ceux qui permettent la mise en couleur de balises
 favorisent évidemment le travail du traducteur-relecteur.
 
 <p>
 Si vous ne connaissez rien aux éditeurs de texte, j'ai fait une introduction à
-<code>Emacs</code> destinée aux débutants sur mon site:
+<code>Emacs</code> destinée aux débutants sur mon site&nbsp;:
 
 <p>
 <code><a
@@ -319,7 +321,7 @@ conservées.  À l'exception de l'attribut <code>name</code> de la balise
 <hr>
 
 <h2>
-<a name="s2.8">2.8 Comment modifier une traduction ?</a>
+<a name="s2.8">2.8 Comment modifier une traduction&nbsp;?</a>
 </h2>
 
 <p>
@@ -347,24 +349,24 @@ ceux qui vous ont précédé dans la traduction du document.
 <hr>
 
 <h2>
-<a name="s2.9">2.9 Comment m'assurer que je n'ai pas modifié une balise par inadvertance ?</a>
+<a name="s2.9">2.9 Comment m'assurer que je n'ai pas modifié une balise par inadvertance&nbsp;?</a>
 </h2>
 
 <p>
 La meilleure méthode consiste encore à compiler votre document s'il s'agit d'un
-format debian-doc ou bien de l'éditer sous un butineur <code>html</code> s'il
+format debian-doc ou bien de l'éditer dans un butineur <code>html</code> s'il
 s'agit d'un document <code>wml</code>.
 </p>
 
 <hr>
 
 <h2>
-<a name="s2.10">2.10 Quels sont les paquets Debian nécessaires à la compilation d'un document ?</a>
+<a name="s2.10">2.10 Quels sont les paquets Debian nécessaires à la compilation d'un document&nbsp;?</a>
 </h2>
 
 <p>
 Il vous faudra installer le paquet <code>debiandoc-sgml</code>.  Pour ce faire,
-acquérez les droits de <em>root</em> et faîtes&nbsp;:
+acquérez les droits de <em>root</em> et faites&nbsp;:
 
 <pre>
      $ apt-get install debiandoc-sgml
@@ -434,7 +436,7 @@ N'hésitez pas à aller lire la documentation afférente à ces outils.
 <hr>
 
 <h2>
-<a name="s2.12">2.12 Comment obtenir une sortie imprimable d'un document ?</a>
+<a name="s2.12">2.12 Comment obtenir une sortie imprimable d'un document&nbsp;?</a>
 </h2>
 
 <p>
@@ -446,7 +448,7 @@ ordinateur et la baignoire ne font pas bon ménage...).
 Le site Debian ne propose la documentation que sous sa forme de sources
 (<code>sgml</code> ou <code>wml</code>).  Donc, vous allez devoir le faire vous
 même.  Récupérez le document source, de toute façon indispensable à
-l'annotation des erreurs et compilez-le vous même.  Reportez-vous à la question
+l'annotation des erreurs et compilez-le vous-même.  Reportez-vous à la question
 «&nbsp;Comment compile-t-on un document au format
 <code>sgml</code>&nbsp;?&nbsp;» pour ce faire.
 
@@ -455,7 +457,7 @@ Si votre système d'impression est bien configuré sous votre Debian, la méthode
 la plus rapide consiste à obtenir du <code>dvi</code>.  Vous pourrez l'imprimer
 directement en tapant tout simplement la commande <code>lpr</code>.  Sinon,
 utilisez du PostScript ou du <code>pdf</code> suivant la configuration de votre
-environnement.  Si vous n'y arrivez pas, faîtes-vous aider pour la
+environnement.  Si vous n'y arrivez pas, faites-vous aider pour la
 configuration de votre système.
 
 <p>
@@ -469,13 +471,13 @@ en en-tête du document, du genre&nbsp;:
 Debian&quot;</var>
 
 <p>
-qui n'est évidemment pas une erreur ;-)
+qui n'est évidemment pas une erreur&nbsp;;-)
 </p>
 
 <hr>
 
 <h2>
-<a name="s2.13">2.13 Y-a-t-il un site ou une référence pour les traductions ?</a>
+<a name="s2.13">2.13 Y-a-t-il un site ou une référence pour les traductions&nbsp;?</a>
 </h2>
 
 <p>
@@ -625,7 +627,7 @@ moins à jour que la page ci-dessus)&nbsp;:
 <p>
 (dans cette partie sont regroupés les termes dont l'usage n'a pas encore décidé
 sous quelle forme ils vont être figés.  Le traducteur a donc la liberté de
-choisir la forme de celui qui lui parait être le meilleur)
+choisir la forme de celui qui lui parait être la meilleure)
 
 <pre>
      CD-ROM ..............  : cédérom, CD-ROM
@@ -637,7 +639,7 @@ choisir la forme de celui qui lui parait être le meilleur)
 <hr>
 
 <h2>
-<a name="s2.14">2.14 Comment poster une traduction ?</a>
+<a name="s2.14">2.14 Comment poster une traduction&nbsp;?</a>
 </h2>
 
 <p>
@@ -663,15 +665,15 @@ pourra alors déposer une nouvelle version qui mettra ainsi à jour le
 <p>
 Si le document est déraisonnablement trop gros pour être posté sur la liste
 (pensez que tout le monde n'a pas une liaison haut débit (<em>i.e.</em> qui
-commence à 56k)), il vaut mieux contacter en privé ou sur la liste les
+commence à 56&nbsp;kbps)), il vaut mieux contacter en privé ou sur la liste les
 responsables de la liste.  Le document leur sera alors À LEUR DEMANDE envoyé
 personnellement et ils s'occuperont de sa mise en place sur le site de Debian.
 Une annonce sera postée alors sur la liste pour un appel à relecture avec le
 pointeur <em>ad hoc</em>.
 
 <p>
-En ce qui concerne le format du poste, soyez raisonnable&nbsp;: une petite page
-en <em>wml</em> pourra être postée dans le corps du message ou en attaché
+En ce qui concerne le format du messagee, soyez raisonnable&nbsp;: une petite
+page en <em>wml</em> pourra être postée dans le corps du message ou en attaché
 tandis qu'un <code>diff</code> conséquent sera attaché après avoir été
 <em>gzipé</em>.
 </p>
@@ -679,7 +681,7 @@ tandis qu'un <code>diff</code> conséquent sera attaché après avoir été
 <hr>
 
 <h2>
-<a name="s2.15">2.15 Comment relire une traduction ?</a>
+<a name="s2.15">2.15 Comment relire une traduction&nbsp;?</a>
 </h2>
 
 <p>
@@ -708,9 +710,9 @@ s'appelle <code>toto.fr.sgml</code>, appelez le vôtre
 <p>
 Éditez alors le document et apportez-y les modifications que vous désirez
 (fautes d'orthographe, de grammaire, de traduction, maladresse de style,
-incompréhension, ...).  Vous pouvez bien sûr commenter pour vous faire
+incompréhension,...).  Vous pouvez bien sûr commenter pour vous faire
 comprendre.  Quand vous aurez fini (et même si vous n'avez pas le temps de tout
-faire&nbsp;: il vaut mieux un texte relu au quart que pas du tout), vous faîtes
+faire&nbsp;: il vaut mieux un texte relu au quart que pas du tout), vous faites
 alors&nbsp;:
 
 <pre>
@@ -729,13 +731,13 @@ d'appliquer rapidement les modifications et que l'envoi du fichier est allégé
 <hr>
 
 <h2>
-<a name="s2.16">2.16 Comment poster une relecture ?</a>
+<a name="s2.16">2.16 Comment poster une relecture&nbsp;?</a>
 </h2>
 
 <p>
 Vous devez poster la relecture comme une demande de relecture (de préférence
 dans le corps du message, sans attaché ni compression).  Si vous avez conservé
-l'envoi original de demande de relecture, faîtes un
+l'envoi original de demande de relecture, faites un
 «&nbsp;<em>reply-to</em>&nbsp;» sur le courriel original.  Sinon, mettez un
 titre explicite pour que le responsable de traduction sache bien que cela lui
 est destiné.  Un titre du genre «&nbsp;relecture du document
@@ -748,14 +750,14 @@ Inutile de mettre le responsable en copie (CC).  Il est abonné.
 <hr>
 
 <h2>
-<a name="s2.17">2.17 Comment demander de l'aide ?</a>
+<a name="s2.17">2.17 Comment demander de l'aide&nbsp;?</a>
 </h2>
 
 <p>
 S'il s'agit d'un problème spécifique à Debian ET à la traduction, la liste de
 <em>debian-l10n-french</em> est là pour cela.  Assurez-vous avant d'avoir bien
-cherché par vous-même -- notamment en ayant lu la FAQ et les documents d'aides
-à
+cherché par vous-même &mdash;&nbsp; notamment en ayant lu la FAQ et les
+documents d'aides à
 
 <p>
 <code><a
@@ -774,11 +776,11 @@ href="http://www.ens-lyon.fr/~mquinson/debian/faq-french/debian-french-faq.html/
 <hr>
 
 <h2>
-<a name="s2.18">2.18 Que devient un document traduit ?</a>
+<a name="s2.18">2.18 Que devient un document traduit&nbsp;?</a>
 </h2>
 
 <p>
-Tout document traduit se voit intégré dans le système de gestion de version
+Tout document traduit se voit intégré dans le système de gestion de versions
 (<code>cvs</code>) de Debian.  La liste des traductions en cours est accessible
 à
 
@@ -819,7 +821,7 @@ le lexique Debian et les traducteurs doivent alors s'y conformer.
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.5<br>
+Version 1.6<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
