--- a/french/international/french/debian-l10n-french-faq.html/ch3.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch3.html
@@ -66,7 +66,7 @@ dire, mais je suppose que cela va mieux en le disant.
 <hr>
 
 <h3>
-<a name="s3.1.1">3.1.1 Que traduire dans un paquet ?</a>
+<a name="s3.1.1">3.1.1 Que traduire dans un paquet&nbsp;?</a>
 </h3>
 
 <p>
@@ -76,7 +76,7 @@ source pour que le programme puisse utiliser plusieurs catalogues de messages.
 C'est une partie de ce qu'on appelle l'internationalisation d'un code source,
 ou <em>i18n</em> en raccourci.  Les autres parties consistent à permettre aux
 programmes d'afficher des caractères autre que ceux utilisés aux États-Unis (Le
-problème ne se pose plus vraiment pour le Français et les langues européennes,
+problème ne se pose plus vraiment pour le français et les langues européennes,
 mais il est d'une actualité brûlante pour les langues asiatiques, par exemple).
 Mais nous ne parlerons ici que de la traduction
 («<em>&nbsp;localization</em>&nbsp;» en anglais, <em>l10n</em> pour faire
@@ -100,7 +100,7 @@ Debian (et Linux en général) sont dotés de beaux mécanismes pour traduire les
 messages des programmes.  Le plus célèbre (et le seul dont je parlerais ici)
 est <code>gettext</code>.  D'un point de vue technique, c'est basé sur une
 bibliothèque <code>gettext</code>, justement) qui permet au programme de
-charger à l'exécution le catalogue de message utilisé pour pouvoir parler dans
+charger à l'exécution le catalogue de messages utilisé pour pouvoir parler dans
 la langue de l'utilisateur.  Pour ceux qui veulent en savoir plus sur comment
 ça marche, le manuel de <code>gettext</code> n'est pas si mal fait que ça
 (<var>www.gnu.org/manual/gettext</var> ou
@@ -142,8 +142,8 @@ assez à faire avec le reste.
 <p>
 Mais même si on se restreint au matériel à traduire pour lesquels il existe des
 procédures automatiques, parler des fichiers <code>po</code> ne suffit pas
-[tout a fait].  Les menus de GNOME (et KDE ?) sont à traduire, aussi, mais ce
-ne sont pas des messages affichés par le programme lui même.  Donc, dans un
+[tout a fait].  Les menus de GNOME (et KDE&nbsp;?) sont à traduire, aussi, mais
+ce ne sont pas des messages affichés par le programme lui même.  Donc, dans un
 premier temps, on a inventé des fichiers <code>.desktop</code> qui contenaient
 ces informations.
 
@@ -202,7 +202,7 @@ On traduit les <code>.po</code>, et la machine se dépatouille.
 Autre catégorie que l'on peut traduire &nbsp;: les fichiers de <code>templates
 debconf</code>.  Il s'agit des textes de questions qu'on va voir quand on
 configure un paquet.  C'est une <em>debianerie</em> (<em>i-e.</em>, hors de
-debian, ça n'existe pas [encore]).
+Debian, ça n'existe pas [encore]).
 
 <p>
 Voici un exemple (traduit) &nbsp;:
@@ -261,7 +261,7 @@ réfléchis.  En attendant, il faut passer par la traduction séparée des
 </h4>
 
 <p>
-Le site web de Debian compte parmi les mieux internationalisés.  Si on a bien
+Le site oueb de Debian compte parmi les mieux internationalisés.  Si on a bien
 réglé son navigateur (la page <code><a
 href="http://www.debian.org/intro/cn">http://www.debian.org/intro/cn</a></code>
 indique comment le faire), les pages arrivent directement dans la langue
@@ -407,13 +407,13 @@ courantes.  En ce qui concerne les <code>templates Debconf</code>, jusqu'à
 présent, personne n'a refusé de les inclure à son paquet pour gagner de la
 place.  Mais ça pourrait se produire un jour.  Ce jour-là, la querelle de
 clocher de savoir comment aider <code>dpkg</code> à gérer les traductions
-pourra reprendre de plus belle.  ;)
+pourra reprendre de plus belle.&nbsp;;)
 </p>
 
 <hr>
 
 <h2>
-<a name="s3.2">3.2 Comment aider &nbsp;: la partie administrative</a>
+<a name="s3.2">3.2 Comment aider&nbsp;: la partie administrative</a>
 </h2>
 
 <p>
@@ -428,7 +428,7 @@ Ce besoin de coordination doit se manifester&nbsp;:
 
 <p>
 <li>
-<em>Entre les traducteurs</em> &nbsp;: pour ne pas faire le travail deux fois,
+<em>Entre les traducteurs</em>&nbsp;: pour ne pas faire le travail deux fois,
 et que les traductions restent à jour.  Il y a pire qu'une page de manuel non
 traduite&nbsp;: une page traduite non à jour, puisque l'utilisateur n'a aucun
 moyen simple de s'en rendre compte.
@@ -436,14 +436,13 @@ moyen simple de s'en rendre compte.
 
 <p>
 <li>
-<em>Entre traducteurs et responsables</em> &nbsp;: pour que les choses
-traduites soient incluses dans les paquets, et que les traductions restent à
-jour.
+<em>Entre traducteurs et responsables</em>&nbsp;: pour que les choses traduites
+soient incluses dans les paquets, et que les traductions restent à jour.
 </li>
 
 <p>
 <li>
-<em>Entre Debian et le reste du monde</em> &nbsp;: la très grande majorité des
+<em>Entre Debian et le reste du monde</em>&nbsp;: la très grande majorité des
 programmes distribués par Debian ne sont pas développés au sein du projet.  Et
 quelques projets extérieurs ont mis en place des sous projets de traductions.
 Il s'agit donc de ne pas marcher sur les plates-bandes de ces gens et, encore
@@ -509,7 +508,7 @@ en regardant les rapports de bogue du paquet.
 
 <p>
 <li>
-Annoncez votre attention par un courriel à la liste «&nbsp;ITT&nbsp;» <em>avant
+Annoncez votre intention par un courriel à la liste «&nbsp;ITT&nbsp;» <em>avant
 de commencer</em>.
 </li>
 
@@ -568,7 +567,7 @@ faut vous tourner&nbsp;:
 
 <p>
 <li>
-<em>GNU</em> : L'url est <code><a
+<em>GNU</em>&nbsp;: L'url est <code><a
 href="http://www.iro.umontreal.ca/contrib/po/HTML/">http://www.iro.umontreal.ca/contrib/po/HTML/</a></code>.
 Attention, GNU étant GNU, il faut avoir signé un papier disant qu'on renonce au
 <em>copyright</em> pour pouvoir traduire leurs programmes.  Plus de détails sur
@@ -577,14 +576,14 @@ leur site.
 
 <p>
 <li>
-<em>GNOME</em> : l'url à connaître dans ce cas est <code><a
+<em>GNOME</em>&nbsp;: l'url à connaître dans ce cas est <code><a
 href="http://developer.gnome.org/projects/gtp/">http://developer.gnome.org/projects/gtp/</a></code>.
 </li>
 
 <p>
 <li>
-<em>KDE</em> : le projet de traduction de KDE est le plus organisé et efficace
-que je connaisse.  Leur url: <code><a
+<em>KDE</em>&nbsp;: le projet de traduction de KDE est le plus organisé et
+efficace que je connaisse.  Leur url: <code><a
 href="http://i18n.kde.org/">http://i18n.kde.org/</a></code>.
 </li>
 
@@ -642,7 +641,7 @@ Tout ça ne résout pas le problème du matériel apporté par la mise en paquet
 Debian de programmes ayant une source extérieure.  Dans le cas des
 <code>templates Debconf</code>, on les traduit évidemment au sein de Debian.
 Mais je me demande depuis longtemps s'il existe des chaînes de fichier
-<code>po</code> introduites par les mainteneurs Debian (lors de leurs
+<code>po</code> introduites par les responsables Debian (lors de leurs
 modifications).  Si c'est le cas, je sais pas comment coordonner la chose.
 </p>
 
@@ -657,7 +656,7 @@ Toute cette démarche administrative peut paraître un peu rébarbative, mais elle
 n'est quand même pas très compliquée à appliquer.  Et si on ne le fait pas, les
 traductions vont être dupliquées, ou au contraire ne seront plus maintenues, ou
 le projet Debian va se faire maudire par le reste du monde libre pour son
-manque de respect des autres projets existants.  Alors s'il vous plaît, faîtes
+manque de respect des autres projets existants.  Alors s'il vous plaît, faites
 un petit effort...
 </p>
 
@@ -716,7 +715,7 @@ cible, il reste à traduire la chose.  Voyons comment faire.
 <hr>
 
 <h3>
-<a name="s3.3.3">3.3.3 Comment traduire les catalogues <code>po</code> ?</a>
+<a name="s3.3.3">3.3.3 Comment traduire les catalogues <code>po</code>&nbsp;?</a>
 </h3>
 
 <p>
@@ -756,7 +755,7 @@ C'est une indication pour vous guider dans le travail de traduction&nbsp;:
 
 <p>
 <li>
-<samp>[T]ranslated</samp>:
+<samp>[T]ranslated</samp>&nbsp;:
 
 <p>
 Chaîne traduite&nbsp;; rien à faire.
@@ -764,7 +763,7 @@ Chaîne traduite&nbsp;; rien à faire.
 
 <p>
 <li>
-<samp>[F]uzzy</samp>:
+<samp>[F]uzzy</samp>&nbsp;:
 
 <p>
 Le programme qui cherche les nouvelles chaînes à traduire dans le code source
@@ -776,7 +775,7 @@ et enfin supprimer le marqueur «&nbsp;flou&nbsp;».
 
 <p>
 <li>
-<samp>[U]ntranslated</samp>:
+<samp>[U]ntranslated</samp>&nbsp;:
 
 <p>
 Chaîne non traduite&nbsp;; à traduire.
@@ -784,7 +783,7 @@ Chaîne non traduite&nbsp;; à traduire.
 
 <p>
 <li>
-<samp>[O]bsolete</samp>:
+<samp>[O]bsolete</samp>&nbsp;:
 
 <p>
 Chaîne à traduire dans une version précédente du programme mais qui a disparu
@@ -912,7 +911,7 @@ lui offrir l'opportunité de vous substituer à lui.  Ajoutez alors votre adresse
 <hr>
 
 <h3>
-<a name="s3.3.4">3.3.4 Comment traduire les <code>templates Debconf</code> ?</a>
+<a name="s3.3.4">3.3.4 Comment traduire les <code>templates Debconf</code>&nbsp;?</a>
 </h3>
 
 <p>
@@ -957,9 +956,9 @@ poursuivre la première ligne sur les suivantes.  Par exemple, le
 </pre>
 
 <p>
-La brève description s'étale sur deux lignes mais <code>debconf</code>
+La description brève s'étale sur deux lignes mais <code>debconf</code>
 n'utilisera que la première ligne comme descriptif rapide, et le reste comme
-descriptif détaillé.  Ainsi, ne faîtes pas de description rapide trop
+descriptif détaillé.  Ainsi, ne faites pas de description rapide trop
 longue&nbsp;!  Les spécifications imposent une limite de «&nbsp;50 caractères
 au plus&nbsp;».
 </p>
@@ -967,18 +966,18 @@ au plus&nbsp;».
 <hr>
 
 <h3>
-<a name="s3.3.5">3.3.5 Comment traduire les descriptions de paquets Debian ?</a>
+<a name="s3.3.5">3.3.5 Comment traduire les descriptions de paquets Debian&nbsp;?</a>
 </h3>
 
 <p>
 Les descriptions de paquets Debian sont les parties de texte explicatives
 concernant ledit paquet.  Les descriptions à traduire sont souvent très
 courtes, quelques lignes à peine, mais les traduire toutes est une tâche de
-longue haleine (prédiction&nbsp;: juillet 2003...&nbsp; date non contractuelle
+longue haleine (prédiction&nbsp;: juillet 2003...&nbsp; date non-contractuelle
 bien sûr).
 
 <p>
-Plus que des traducteurs, il nous faut des relecteurs !
+Plus que des traducteurs, il nous faut des relecteurs&nbsp;!
 </p>
 
 <hr>
@@ -996,7 +995,7 @@ href="mailto:grisu-td@auric.debian.org">mailto:grisu-td@auric.debian.org</a></co
 et la page d'accueil est <code><a
 href="http://auric.debian.org/~grisu/ddts">http://auric.debian.org/~grisu/ddts</a></code>.
 Comme on peut le constater, ce projet n'a pas encore de statut très clair au
-sein de Debian, ne disposant ni d'un espace web ni d'une liste de diffusion
+sein de Debian, ne disposant ni d'un espace oueb ni d'une liste de diffusion
 dédiés.  De plus, son intégration en tant que tel pose aussi pas mal de soucis.
 Mais c'est un autre débat (suivre debian-devel pour les tenants et
 aboutissants).
@@ -1122,9 +1121,8 @@ Les lignes débutant par «&nbsp;#&nbsp;» sont des commentaires.
 <p>
 <li>
 Les lignes commençant par «&nbsp;From: Nom &lt;email@host.com&gt;&nbsp;»
-indique l'adresse électronique du traducteur l'adresse électronique du
-traducteur.  (Cette ligne est utile si le traducteur envoie son courrier à
-partir d'une autre adresse électronique).
+indique l'adresse électronique du traducteur.  (Cette ligne est utile si le
+traducteur envoie son courrier à partir d'une autre adresse électronique).
 </li>
 
 <p>
@@ -1179,7 +1177,7 @@ Traduire conformément aux règles en vigueur dans la traduction chez Debian.
 <hr>
 
 <h4>
-<a name="s3.3.5.4">3.3.5.4 relecture</a>
+<a name="s3.3.5.4">3.3.5.4 Relectures</a>
 </h4>
 
 <p>
@@ -1221,8 +1219,8 @@ renommer les fichiers <em>NomDuPaquet.todo</em> en <em>NomDuPaquet.relu</em>
 <p>
 <li>
 éditer <em>NomDuPaquet.relu</em> et effectuer les corrections nécessaires, vous
-pouvez ajouter des commentaires en ajoutant des lignes commençant par «
-&gt;&gt; » suivit d'une espace puis le texte de commentaire,
+pouvez ajouter des commentaires en ajoutant des lignes commençant par
+«&nbsp;&gt;&gt;&nbsp;» suivit d'une espace puis le texte de commentaire,
 </li>
 
 <p>
@@ -1234,11 +1232,11 @@ automatiquement.
 </ul>
 
 <p>
-Pour plus d'information, lisez la documentation fournie avec le script :
+Pour plus d'information, lisez la documentation fournie avec le script&nbsp;:
 <samp>perldoc ddts-rev</samp>.
 
 <p>
-Des fichiers d'exemple sont aussi fournis : un fichier <code><a
+Des fichiers d'exemple sont aussi fournis&nbsp;: un fichier <code><a
 href="http://perso.wanadoo.fr/nico.bertol/ddts/test.txt">http://perso.wanadoo.fr/nico.bertol/ddts/test.txt</a></code>à
 relire, un fichier <code><a
 href="http://perso.wanadoo.fr/nico.bertol/ddts/test.relu.txt">http://perso.wanadoo.fr/nico.bertol/ddts/test.relu.txt</a></code>relu,
@@ -1259,8 +1257,8 @@ Insérez simplement l'une des lignes suivantes dans le fichier
 
 <pre>
       deb http://gluck.debian.org/~grisu/ddts/aptable fr/potato main deb
-      http://gluck.debian.org/~grisu/ddts/aptable fr/woody main deb
-      http://gluck.debian.org/~grisu/ddts/aptable fr/sid main
+      deb http://gluck.debian.org/~grisu/ddts/aptable fr/woody main deb
+      deb http://gluck.debian.org/~grisu/ddts/aptable fr/sid main
 </pre>
 
 <p>
@@ -1272,7 +1270,7 @@ déjà traduites.
 <hr>
 
 <h3>
-<a name="s3.3.6">3.3.6 Comment traduire les pages de manuel ?</a>
+<a name="s3.3.6">3.3.6 Comment traduire les pages de manuel&nbsp;?</a>
 </h3>
 
 <p>
@@ -1284,7 +1282,7 @@ reste à jour.  Et je n'ai aucune idée de comment faire...
 <hr>
 
 <h3>
-<a name="s3.3.7">3.3.7 Comment traduire les fichiers info ?</a>
+<a name="s3.3.7">3.3.7 Comment traduire les fichiers info&nbsp;?</a>
 </h3>
 
 <p>
@@ -1294,7 +1292,7 @@ Aucune idée.  <em>Input welcome</em>...
 <hr>
 
 <h3>
-<a name="s3.3.8">3.3.8 Comment traduire la documentation ?</a>
+<a name="s3.3.8">3.3.8 Comment traduire la documentation&nbsp;?</a>
 </h3>
 
 <p>
@@ -1315,7 +1313,7 @@ Voilà le premier jet de ce HOWTO traduire pour Debian.  Si vous avez le moindre
 commentaire à faire, n'hésitez pas.
 
 <p>
-C'est tout, j'espère que <em>woody</em> sera l'avènement de
+C'est tout, j'espère que <em>Woody</em> sera l'avènement de
 l'internationalisation effective de Debian...
 </p>
 
@@ -1332,7 +1330,7 @@ l'internationalisation effective de Debian...
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.5<br>
+Version 1.6<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
