--- a/french/international/french/debian-l10n-french-faq.html/ch4.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch4.html
@@ -30,12 +30,12 @@ Chapitre 4 Vieux débats classés...
 <hr>
 
 <h2>
-<a name="s4.1">4.1 Pourquoi « paquet » et pas « paquetage » ?</a>
+<a name="s4.1">4.1 Pourquoi «&nbsp;paquet&nbsp;» et pas «&nbsp;paquetage&nbsp;»&nbsp;?</a>
 </h2>
 
 <p>
-On trouve partout « paquetage » et non « paquet ».  Pourquoi Debian se
-singularise-t-elle ?
+On trouve partout «&nbsp;paquetage&nbsp;» et non «&nbsp;paquet&nbsp;».
+Pourquoi Debian se singularise-t-elle&nbsp;?
 
 <p>
 Le débat a été tranché en 1997, c'est-à-dire bien avant qu'on ne trouve
@@ -52,7 +52,7 @@ lexique&nbsp;?&nbsp;».
 <hr>
 
 <h2>
-<a name="s4.2">4.2 Pourquoi ne peut-on pas mettre d'image dans le format debian-doc ?</a>
+<a name="s4.2">4.2 Pourquoi ne peut-on pas mettre d'image dans le format debian-doc&nbsp;?</a>
 </h2>
 
 <p>
@@ -75,7 +75,7 @@ entière vous remerciera...
 <hr>
 
 <h2>
-<a name="s4.3">4.3 Peut-on changer une traduction établie dans le lexique ?</a>
+<a name="s4.3">4.3 Peut-on changer une traduction établie dans le lexique&nbsp;?</a>
 </h2>
 
 <p>
@@ -106,7 +106,7 @@ traduction&nbsp;: Debian seule sera perdante sinon...
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.5<br>
+Version 1.6<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
