--- a/french/international/french/debian-l10n-french-faq.html/ch5.html
+++ b/french/international/french/debian-l10n-french-faq.html/ch5.html
@@ -40,9 +40,9 @@ Chapitre 5 Règles typographiques de base
 </h3>
 
 <p>
-La langue française impose des règles typographique très strictes qu'il faut
+La langue française impose des règles typographiques très strictes qu'il faut
 essayer de respecter.  La typographie est l'ensemble des règles de mise en page
-d'un document que ce soit la distance entre les mots, leur césure, leur
+d'un document que ce soit la distance entre les mots, sa césure, leur
 disposition ou bien l'usage de la ponctuation.
 
 <p>
@@ -59,18 +59,18 @@ source et que l'on est sûr que la mise en page et l'information ne vont pas
 être changées.
 
 <p>
-Il existe un autre format beaucoup utilisé qui est le format texte, avec ou non
-des balises.  Ces formats sont lisibles directement avec un éditeur de texte ou
-bien avec des outils dédiés qui mettent en page (comme un navigateur pour le
-HTML).  On peut résumer ces formats au texte pur (caractères ASCII étendus
-compris) et au HTML.  L'inconvénient de ces formats est qu'il n'y a pas de mise
-en page facile à respecter pour deux raisons&nbsp;: la première est que la mise
-en page dépend du navigateur utilisé, de la fonte utilisée et de la façon dont
-la machine interprète le tout.  Comme il n'y a pas vraiment de standard de
-rendu, le résultat varie beaucoup d'un environnement à l'autre.  Deuxièment,
-certains formats comme le texte sont extrêmement limités dans leur capacité de
-mise en page, ce qui impose évidemment de ne pas pouvoir respecter toutes les
-règles de typographie.
+Il existe d'autres formats beaucoup utilisés qui est des formats textes, avec
+ou non des balises.  Ces formats sont lisibles directement avec un éditeur de
+texte ou bien avec des outils dédiés qui mettent en page (comme un navigateur
+pour le HTML).  On peut résumer ces formats au texte pur (caractères ASCII
+étendus compris) et au HTML.  L'inconvénient de ces formats est qu'il n'y a pas
+de mise en page facile à respecter pour deux raisons&nbsp;: la première est que
+la mise en page dépend du navigateur utilisé, de la fonte utilisée et de la
+façon dont la machine interprète le tout.  Comme il n'y a pas vraiment de
+standard de rendu, le résultat varie beaucoup d'un environnement à l'autre.
+Deuxièmement, certains formats comme le texte sont extrêmement limités dans
+leur capacité de mise en page, ce qui impose évidemment de ne pas pouvoir
+respecter toutes les règles de typographie.
 
 <p>
 Un environnement bien fait devrait bien entendu gérer cela automatiquement.  Ce
@@ -78,7 +78,7 @@ n'est pas encore le cas chez nous.  J'y travaille et j'ai espoir que cela se
 fasse avant le XXII-ième siècle.  En attendant, il faut faire avec et compenser
 nous-même les faiblesses du système.  Pour information, voici ce qui devrait
 être appliqué en ce qui concerne la mise en page des signes de ponctuation.
-J'ai synthétisé tout cela dans un document que vous pouvez trouver à&nbsp;:\
+J'ai synthétisé tout cela dans un document que vous pouvez trouver à&nbsp;:
 
 <p>
 <code><a
@@ -96,8 +96,8 @@ d'interrogation, d'exclamation, les guillemets et les parenthèses.
 <p>
 L'unité de l'espace de base en typographie est le cadratin.  Pour ceux qui
 connaisse, elle est égale à «&nbsp;1 em&nbsp;» sous TeX.  Cette espace est
-variable et dépend de l'environnement (fontes, graisses, <em>etc.</em>).  Voici
-ce qu'impose la typographie française&nbsp;:
+variable et dépend de l'environnement (fontes, graisses, etc.).  Voici ce
+qu'impose la typographie française&nbsp;:
 
 <pre>
       -----------------------------------------------------------
@@ -132,7 +132,7 @@ détails, allez lire le document placé en lien au-dessus.
 <p>
 On se rend bien compte que cela est ingérable pour nous au coup par coup.  Je
 vais donc modifier <code>debiandoc</code> en conséquence.  En attendant, on
-peut limiter beaucoup certains dégats malheureux.
+peut limiter beaucoup certains dégâts malheureux.
 
 <p>
 On ne peut transcrire aisément la finesse de la taille de l'espace préconisée
@@ -221,7 +221,7 @@ l'imbrication de citations, par soucis de clarté.
 <p>
 Les mots étrangers cités dans votre traduction sont à mettre en évidence.  En
 typographie, on utilise généralement l'italique pour cela.  Ici, il vous faudra
-utiliser les balises &lt;em&gt; &lt;/em&gt;.  Voici une liste non exhaustive de
+utiliser les balises &lt;em&gt; &lt;/em&gt;.  Voici une liste non-exhaustive de
 termes à mettre en italique&nbsp;:
 
 <pre>
@@ -257,16 +257,16 @@ GNU-Linux&nbsp;: guide d'installation et d'utilisation&nbsp;».
 </h4>
 
 <p>
-Partie copiée-collée d'un courriel de Norbert ?
+Partie copiée-collée d'un courriel de Norbert Bottlaender-Prie
 
 <p>
-On l'emploie aussi :
+On l'emploie aussi&nbsp;:
 </p>
 
 <hr>
 
 <h5>
-<a name="s5.1.2.5.1">5.1.2.5.1 au début d'une phrase :</a>
+<a name="s5.1.2.5.1">5.1.2.5.1 au début d'une phrase&nbsp;:</a>
 </h5>
 
 <p>
@@ -278,9 +278,9 @@ en style direct (mais non quand il précède une explication ou une
 [exemples]
 
 <pre>
-     Il ne répondait pas à la question que se posait chacun d'entre nous&nbsp;: À 
-     quoi cela sert-il&nbsp;?
-     Le père demanda&nbsp;: «&nbsp;Pourquoi as-tu agi ainsi&nbsp;?nbsp;»
+     Il ne répondait pas à la question que se posait chacun d'entre nous : À 
+     quoi cela sert-il ?
+     Le père demanda : « Pourquoi as-tu agi ainsi ? »
 </pre>
 
 <p>
@@ -325,7 +325,8 @@ point&nbsp;:</em>
 </pre>
 
 <p>
-<em>Par contre,la minuscule est de règle</em> après un « moins » ou tiret - :
+<em>Par contre,la minuscule est de règle</em> après un «&nbsp;-&nbsp;» ou
+tiret&nbsp;:
 
 <p>
 [exemple]
@@ -345,13 +346,13 @@ l'intérieur d'un paragraphe de lignes pleines&nbsp;:
 [exemple]
 
 <pre>
-     «&nbsp;La communauté se dissout&nbsp;: 1° par la mort naturelle&nbsp;; 2° par la mort 
-     civile&nbsp;; 3° par le divorce&nbsp;; 4° par la séparation de corps&nbsp;; 5° par la 
-     séparation de biens.&nbsp;» (C. civ., art. 1441)
+     « La communauté se dissout : 1° par la mort naturelle ; 2° par la mort 
+     civile ; 3° par le divorce ; 4° par la séparation de corps ; 5° par la 
+     séparation de biens. » (C. civ., art. 1441)
 </pre>
 
 <p>
-extrait des <em>Règles typographiques en usage à l'Imprimerie Nationale</em>, p
+Extrait des <em>Règles typographiques en usage à l'Imprimerie Nationale</em>, p
 38-40.
 </p>
 
@@ -425,7 +426,7 @@ Un mot quand même pour ajouter que nos amis anglophones ne prennent pas souvent
 soin d'être constant dans le choix de la catégorie grammaticale du mot débutant
 chaque partie d'une énumération.  Si on choisit un verbe pour la première
 partie d'une énumération, on commencera toutes les autres parties de la même
-énumération par un verbe.  <em>Etc.</em>, <em>etc.</em>
+énumération par un verbe.  <em>Etc.</em>
 </p>
 
 <hr>
@@ -496,8 +497,8 @@ généralement en iso-latin.  Un éditeur de textes est donc largement suffisant.
 Les éditeurs sous Debian GNU-Linux sont très nombreux donc vous n'avez que
 l'embarras du choix.  Toutefois, pour des raisons pratiques, certains sont plus
 performants que d'autres pour ce genre de travail car ils permettent, outre une
-coloration syntaxique des éléments de balise (bien pratique pour la relecture)
-de passer aussi certaines commandes UNIX directement depuis l'éditeur (pratique
+coloration lexicale des éléments de balise (bien pratique pour la relecture) de
+passer aussi certaines commandes UNIX directement depuis l'éditeur (pratique
 pour les <code>diff</code> et <code>patch</code> par exemple).  Les deux plus
 puissants sont Vim et (X)Emacs.
 
@@ -544,7 +545,7 @@ La FAQ du forum fr.lettres.langue.française&nbsp;: <code><a
 href="http://www.chez.com/languefrancaise/faq/faq.htm">http://www.chez.com/languefrancaise/faq/faq.htm</a></code>
 
 <p>
-(si vous trouvez un autre hébergeur que chez www.chez.com, signalez-le
+(si vous trouvez un autre hébergeur que <em>www.chez.com</em>, signalez-le
 moi&nbsp;: leur publicité est vraiment fatigante au possible.  Je changerai
 l'adresse.)
 </p>
@@ -570,7 +571,7 @@ Le dictionnaire de René Cougnenc (<code>dico</code>) sera disponible sur Woody.
 Une version pour Potato est disponible sur <code><a
 href="http://marillat.free.fr">http://marillat.free.fr</a></code>.  Il vous
 donnera en plus l'ensemble des codes postaux du territoire français
-métropolitain :-)
+métropolitain&nbsp;:-)
 </li>
 
 </ul>
@@ -604,7 +605,7 @@ pratique qui réagit au copier UNIX de la souris.  Très bon outil.
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.5<br>
+Version 1.6<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
