--- a/french/international/french/debian-l10n-french-faq.html/index.html
+++ b/french/international/french/debian-l10n-french-faq.html/index.html
@@ -65,7 +65,7 @@ Public License&nbsp;»</em>, version 2 ou suivante.
 
 <p>
 Pour obtenir cette licence, lisez <var>/usr/doc/copyright/GPL</var> dans votre
-distribution Debian GNU-Linux ou sur le oueb <code><a
+distribution Debian GNU-Linux ou sur la toile <code><a
 href="http://www.gnu.org/copyleft/gpl.html">http://www.gnu.org/copyleft/gpl.html</a></code>
 
 </p>
@@ -77,51 +77,51 @@ href="http://www.gnu.org/copyleft/gpl.html">http://www.gnu.org/copyleft/gpl.html
 <ul>
 <li><a href="ch1.html">1 La vie de la liste</a>
 <ul>
-<li><a href="ch1.html#s1.1">1.1</a> Où trouver cette FAQ ?
-<li><a href="ch1.html#s1.2">1.2</a> Comment lire cette FAQ ?
-<li><a href="ch1.html#s1.3">1.3</a> Comment s'abonner ? se désabonner ?
-<li><a href="ch1.html#s1.4">1.4</a> Comment se règlent les différends ?
+<li><a href="ch1.html#s1.1">1.1</a> Où trouver cette FAQ&nbsp;?
+<li><a href="ch1.html#s1.2">1.2</a> Comment lire cette FAQ&nbsp;?
+<li><a href="ch1.html#s1.3">1.3</a> Comment s'abonner&nbsp;? se désabonner&nbsp;?
+<li><a href="ch1.html#s1.4">1.4</a> Comment se règlent les différends&nbsp;?
 <li><a href="ch1.html#s1.5">1.5</a> Je n'ai plus le temps de (ou je ne veux plus) participer
-<li><a href="ch1.html#s1.6">1.6</a> Quelle est la fréquentation du forum ?
-<li><a href="ch1.html#s1.7">1.7</a> Quels sont les critères pour participer ?
-<li><a href="ch1.html#s1.8">1.8</a> Qui est le responsable ? (Qui contacter en cas de ...)
-<li><a href="ch1.html#s1.9">1.9</a> Où est archivée la liste ?
-<li><a href="ch1.html#s1.10">1.10</a> Qui est René Cougnenc ?
+<li><a href="ch1.html#s1.6">1.6</a> Quelle est la fréquentation du forum&nbsp;?
+<li><a href="ch1.html#s1.7">1.7</a> Quels sont les critères pour participer&nbsp;?
+<li><a href="ch1.html#s1.8">1.8</a> Qui est le responsable&nbsp;? (Qui contacter en cas de ...)
+<li><a href="ch1.html#s1.9">1.9</a> Où est archivée la liste&nbsp;?
+<li><a href="ch1.html#s1.10">1.10</a> Qui est René Cougnenc&nbsp;?
 </ul>
 <li><a href="ch2.html">2 Techniques</a>
 <ul>
-<li><a href="ch2.html#s2.1">2.1</a> Quel est le format des traductions ?
-<li><a href="ch2.html#s2.2">2.2</a> Comment apprendre le format debian-doc <code>sgml</code> et <code>wml</code> ?
-<li><a href="ch2.html#s2.3">2.3</a> Quelle traduction choisir ?
-<li><a href="ch2.html#s2.4">2.4</a> Comment se déclarer traducteur ?
-<li><a href="ch2.html#s2.5">2.5</a> Comment récupérer la responsabilité d'une traduction ?
-<li><a href="ch2.html#s2.6">2.6</a> Comment récupérer un document ?
-<li><a href="ch2.html#s2.7">2.7</a> Comment éditer une traduction ?
-<li><a href="ch2.html#s2.8">2.8</a> Comment modifier une traduction ?
-<li><a href="ch2.html#s2.9">2.9</a> Comment m'assurer que je n'ai pas modifié une balise par inadvertance ?
-<li><a href="ch2.html#s2.10">2.10</a> Quels sont les paquets Debian nécessaires à la compilation d'un document ?
+<li><a href="ch2.html#s2.1">2.1</a> Quel est le format des traductions&nbsp;?
+<li><a href="ch2.html#s2.2">2.2</a> Comment apprendre le format debian-doc <code>sgml</code> et <code>wml</code>&nbsp;?
+<li><a href="ch2.html#s2.3">2.3</a> Quelle traduction choisir&nbsp;?
+<li><a href="ch2.html#s2.4">2.4</a> Comment se déclarer traducteur&nbsp;?
+<li><a href="ch2.html#s2.5">2.5</a> Comment récupérer la responsabilité d'une traduction&nbsp;?
+<li><a href="ch2.html#s2.6">2.6</a> Comment récupérer un document&nbsp;?
+<li><a href="ch2.html#s2.7">2.7</a> Comment éditer une traduction&nbsp;?
+<li><a href="ch2.html#s2.8">2.8</a> Comment modifier une traduction&nbsp;?
+<li><a href="ch2.html#s2.9">2.9</a> Comment m'assurer que je n'ai pas modifié une balise par inadvertance&nbsp;?
+<li><a href="ch2.html#s2.10">2.10</a> Quels sont les paquets Debian nécessaires à la compilation d'un document&nbsp;?
 <li><a href="ch2.html#s2.11">2.11</a> Comment compile-t-on un document au format <code>sgml</code>?
-<li><a href="ch2.html#s2.12">2.12</a> Comment obtenir une sortie imprimable d'un document ?
-<li><a href="ch2.html#s2.13">2.13</a> Y-a-t-il un site ou une référence pour les traductions ?
-<li><a href="ch2.html#s2.14">2.14</a> Comment poster une traduction ?
-<li><a href="ch2.html#s2.15">2.15</a> Comment relire une traduction ?
-<li><a href="ch2.html#s2.16">2.16</a> Comment poster une relecture ?
-<li><a href="ch2.html#s2.17">2.17</a> Comment demander de l'aide ?
-<li><a href="ch2.html#s2.18">2.18</a> Que devient un document traduit ?
+<li><a href="ch2.html#s2.12">2.12</a> Comment obtenir une sortie imprimable d'un document&nbsp;?
+<li><a href="ch2.html#s2.13">2.13</a> Y-a-t-il un site ou une référence pour les traductions&nbsp;?
+<li><a href="ch2.html#s2.14">2.14</a> Comment poster une traduction&nbsp;?
+<li><a href="ch2.html#s2.15">2.15</a> Comment relire une traduction&nbsp;?
+<li><a href="ch2.html#s2.16">2.16</a> Comment poster une relecture&nbsp;?
+<li><a href="ch2.html#s2.17">2.17</a> Comment demander de l'aide&nbsp;?
+<li><a href="ch2.html#s2.18">2.18</a> Que devient un document traduit&nbsp;?
 <li><a href="ch2.html#s2.19">2.19</a> Qu'est-ce qui fait référence en matière de traduction pour Debian&nbsp;?
 </ul>
 <li><a href="ch3.html">3 Traduire pour Debian (et pour le logiciel libre en général)</a>
 <ul>
 <li><a href="ch3.html#s3.1">3.1</a> Introduction
-<li><a href="ch3.html#s3.2">3.2</a> Comment aider &nbsp;: la partie administrative
+<li><a href="ch3.html#s3.2">3.2</a> Comment aider&nbsp;: la partie administrative
 <li><a href="ch3.html#s3.3">3.3</a> Comment traduire
 <li><a href="ch3.html#s3.4">3.4</a> Conclusion, avenir
 </ul>
 <li><a href="ch4.html">4 Vieux débats classés...</a>
 <ul>
-<li><a href="ch4.html#s4.1">4.1</a> Pourquoi « paquet » et pas « paquetage » ?
-<li><a href="ch4.html#s4.2">4.2</a> Pourquoi ne peut-on pas mettre d'image dans le format debian-doc ?
-<li><a href="ch4.html#s4.3">4.3</a> Peut-on changer une traduction établie dans le lexique ?
+<li><a href="ch4.html#s4.1">4.1</a> Pourquoi «&nbsp;paquet&nbsp;» et pas «&nbsp;paquetage&nbsp;»&nbsp;?
+<li><a href="ch4.html#s4.2">4.2</a> Pourquoi ne peut-on pas mettre d'image dans le format debian-doc&nbsp;?
+<li><a href="ch4.html#s4.3">4.3</a> Peut-on changer une traduction établie dans le lexique&nbsp;?
 </ul>
 <li><a href="ch5.html">5 Règles typographiques de base</a>
 <ul>
@@ -141,7 +141,7 @@ href="http://www.gnu.org/copyleft/gpl.html">http://www.gnu.org/copyleft/gpl.html
 Foire aux questions de la liste debian-l10n-french<br>
 
 <address>
-Version 1.5<br>
+Version 1.6<br>
 Patrice Karatchentzeff <code><a href="mailto:p.karatchentzeff@free.fr">p.karatchentzeff@free.fr</a></code>
 </address>
 
